Change background color to root. Fixes color getting cut off at bottom

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body, html {
     height: 100%;
     margin: 0;
     font-size: 16px;
+    background-color: var(--background);
   }
 
 .container {
@@ -20,7 +21,6 @@ body, html {
     display: grid;
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 4fr;
-    background-color: var(--background);
     gap: 3px;
   }
 
@@ -102,6 +102,7 @@ body, html {
 .project{
     background-color: white;
     margin: 10px;
+    border-left: var(--main) 3px solid;
 }
 
 .trending-container,
@@ -110,10 +111,7 @@ body, html {
     font-size: 12px;
 }
 
-.announcements-container{
-    margin: 0px;
-    padding: 0px;
-}
+
 
 
 
